Adjusted some width and height to fix the strange look on Safari Browsers

--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -68,6 +68,8 @@ html {
       font-size: 0.8rem;
       max-width: 40%;
       padding: 12%;
+      padding-left: 1%;
+      padding-right: 1%;
     }
 
     .nav-link-middle {
